Bugfix: Hardcore veteran guide
Used Forgotten Grove instead of the correct Forbidden Grove.

--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -14,7 +14,7 @@ _Note: This is a constantly evolving guide. It is a work in progress and will be
 
 - Picking Apocalypse as your starting difficulty will give you extra gold when you first start. You can then reroll your campaign to veteran at the stone.
 - Starting on Survivor difficulty is a viable strategy for levelling up your character and getting some items before switching to Veteran. For example, you can get the Thaen Seed and plant it in the Ward before swapping to Veteran.
-- If you want additional easy gold at the start, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
+- If you want additional easy gold at the start, roll for **Yaesha - Forbidden Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
 - You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
 - Once you have 1500x Scrap and 5x Lumenite, you can get your second archetype.
@@ -112,9 +112,9 @@ When you first load into town, it is suggested that you:
 
 The recommendation is to start your campaign in **Yaesha - Red Palace**. This is because you get the [Thaen Seed](https://remnant.wiki/Thaen_Seed) from the Widow's Court, which is incredibly helpful for survival as you progress through the campaign. Additionally, you can get the [Seal of the Empress](https://remnant.wiki/Seal_of_the_Empress) Ring for more survivability by showing deference in all dialogs with the Empress.
 
-### Why not Yaesha - Forgotten Grove?
+### Why not Yaesha - Forbidden Grove?
 
-The Forgotten Grove is a commonly recommended starting zone, as you can skip a world boss (Ravager) by killing the Doe. However, the mid-dungeon boss fights are considered more difficult than if you start Red Palace. Additionally, losing access to Thaen Fruit and Seal of the Empress make the Forgotten Grove a less useful starting zone.
+The Forbidden Grove is a commonly recommended starting zone, as you can skip a world boss (Ravager) by killing the Doe. However, the mid-dungeon boss fights are considered more difficult than if you start Red Palace. Additionally, losing access to Thaen Fruit and Seal of the Empress make the Forbidden Grove a less useful starting zone.
 
 ### Red Palace tips
 
